# bitcoin

./: .gitignore  27.json  compare.sh  diff  final_openrpc.json  getrawtransaction_verbose_2.json  justfile  libbitcoinconsensus.pc  local_cli_getrawtransaction.json  open-rpc-generator-config.json  openrpc_1771711119.json  openrpc_1771712195.json  openrpc_1772568164.json  openrpc_1772568810.json  openrpc_1772570360.json  openrpc_1772570419.json  openrpc_1772732666.json  openrpc_1772732867.json  openrpc_1772736021.json  openrpc_1772737766.json  openrpc_1773158959.json  openrpc_1773244956.json  openrpc_1773275961.json  openrpc_1773277168.json  openrpc_1773342400.json  openrpc_MINE.json  original_openrpc.json  schema.json  system_cli_gettransaction.json  test.sh
generator/: Cargo.toml  README.md  rust-component.js
generator/src/: generated.rs  lib.rs  main.rs
rust-bitcoin-cli/: Cargo.toml
rust-bitcoin-cli/src/: generated.rs
src/: CMakeLists.txt  coins.cpp  coins.h  init.cpp
src/policy/fees/: block_policy_estimator.cpp
src/rpc/: blockchain.cpp  fees.cpp  mempool.cpp  rawtransaction.cpp  rawtransaction_util.cpp  rawtransaction_util.h  schema.cpp  schema.h  server.cpp  server.h  util.cpp  util.h
src/test/: base58_tests.cpp  blockfilter_tests.cpp  key_io_tests.cpp  script_standard_tests.cpp  script_tests.cpp  sighash_tests.cpp  transaction_tests.cpp
src/test/fuzz/: coins_view.cpp
src/util/: subprocess.h
src/wallet/rpc/: addresses.cpp  transactions.cpp
