[package]
name = "bitcoin-cli-rpc"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
rust_decimal = { version = "1", features = ["serde"] }

